fix contrast errors to improve accessibility
assesssed using WAVE extension. contrasts updated to meet WCAG AAA

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -1,7 +1,7 @@
 .btn{
   font-family: $secondary-font;
   border: none;
-  color: $white !important;
+  color: $white;
   padding: 20px 45px;
   border-radius: 0;
   &:focus{
@@ -61,8 +61,9 @@
 }
 
 .btn-primary{
-  background: $primary-color;
+  background: $primary-darker-bkgd;
   color: $white;
+  // color: $text-color-dark;
   &:hover{
     background: $darker-primary-color;
   }
