--- a/assets/scss/components/_about.scss
+++ b/assets/scss/components/_about.scss
@@ -13,7 +13,7 @@
     flex-wrap: wrap;
   }
   &-company{
-    background: $primary-color;
+    background: $primary-darker-bkgd;
     width: 40%;
     padding: 70px 38px;
     @include desktop{
