--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -1,6 +1,6 @@
 .site-contact{
   padding: 150px 0 100px;
-  background: $off-white;
+  background: $cool-white;
   @include mobile{
     padding: 120px 0 100px;
   }
