--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -68,7 +68,7 @@
       text-align: center;
     }
     a{
-      color: $off-white;
+      color: $cool-white;
       transition: all .3s ease;
       @include tablet{
         font-size: 20px;
