--- a/assets/scss/components/_history.scss
+++ b/assets/scss/components/_history.scss
@@ -1,5 +1,5 @@
 .site-history {
-  background: $off-white;
+  background: $cool-white;
   padding: 100px 0;
   overflow: hidden;
 
