--- a/assets/scss/components/_team.scss
+++ b/assets/scss/components/_team.scss
@@ -1,5 +1,6 @@
 .site-team{
   padding: 100px 0;
+  background-color: $cool-white;
   &-member{
     background: $off-white;
     padding: 65px 30px 30px;
@@ -29,7 +30,7 @@
       }
       h3{
         font-size: 20px;
-        color: $darker-primary-color;
+        color: $text-color-dark;
         margin-bottom: 10px;
         font-weight: 500;
       }
